# pyresparser

./: .dockerignore  .gitignore  dockerfile  export_to_csv.py  makefile  post_install.py  pyproject.toml  rank_candidate.py
nbs/: explore.py  scrape_job_description.py
pyresparser/: command_line.py
scripts/: README.md  convert_json_to_csv.py  extract_to_json_cv_by_cv.sh
